<resources>
    <string name="app_name">smARThistory</string>

    <string name="action_settings">Settings</string>
    <string name="email_hint">Enter your email address</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="btn_adduser">Add User</string>
    <string name="SHARED_PREFS">"com.kell.android.smARThistory.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>


    <string name="action_logout">Logout</string>
    <string name="new_list_hint">Enter new list name…</string>
    <string name="title_edit_text">Title</string>
    <string name="artist_edit_text">Artist</string>
    <string name="year_edit_text">Year / Period</string>
    <string name="info_edit_text">Info</string>
    <string name="url_edit_text">URL</string>
    <string name="confirm_hint">Confirm your password</string>
    <string name="login_button">Login</string>
    <string name="register_button">New? Click here to register.</string>
    <string name="alphanum_only">Alphanumeric characters only</string>
    <string name="menu_edit_card">Edit Card</string>
    <string name="menu_delete_card">Delete Card</string>

    <string name="menu_delete_list">Delete List</string>
    <string name="menu_edit_list">Edit List Name</string>
    <string name="delete_card_text">Delete selected card?</string>
</resources>
