<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addUserFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context="com.kell.android.smarthistory.AddUserFragment">

    <EditText
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left|top"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pwd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_text"
        android:layout_gravity="left|center_vertical"
        android:ems="10"
        android:hint="@string/pwd_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pwdConfirm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pwd_text"
        android:layout_gravity="left|center_vertical"
        android:ems="10"
        android:hint="@string/confirm_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/add_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwdConfirm_text"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/btn_adduser" />

</RelativeLayout>
