<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.kell.android.smarthistory.UserLoginFragment">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignEnd="@+id/login_pwd"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/login_pwd"
            android:layout_marginTop="117dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/input_layout_email">


        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/login_button"/>


        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/new_user_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="60dp"
            android:paddingTop="16dp"
            android:text="@string/register_button"
            android:textSize="18sp" />

        <Button

            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/new_user_button"
            android:layout_alignStart="@+id/new_user_button"
            android:layout_below="@+id/input_layout_password"
            android:text="@string/login_button" />
    </RelativeLayout>
</ScrollView>
